      to allocate memory for a samu user structure is reported 
      as a failure to the calling function.
    * Fix memleak in printing gencache contents.
    * Fix warnings reported by gcc4 -O6 on 64-bit systems 
    * Fix naming conflicts with 'net usershare' structures and 
      Solaris header files.
    * Fix memleaks on error paths from the ASN.1 parsing code.


o   Gerald (Jerry) Carter <jerry@samba.org>
    * Fix 'make install' problem when building outside source/.
    * Fix 'net ads join' when the workgroup is set incorrectly in 
      smb.conf.


o   Guenther Deschner <gd@samba.org>
    * Fix memleaks in winbindd ads searches.
    * Fix timestamp bug in pam_winbindd which forced users to change
      passwords prematurely.
    * Small debug message cleanups.
    * Small fixes for 'net ads password'.
    * Add TCP fallback for our implementation of the CHANGEPW 
      kpasswd calls.
    * BUG 3843: Allow to set passwords directly when creating users 
      via "net rpc user add" 
    * Add "rpc shell" to the usage text for the net command.
    * Winbindd user aliases lookup fixes for large domains.
    * Fix memleak in the CLDAP processing code.


o   Bjoern Jacke <samba@j3e.de>.
    * Fix DMAPI compile failures on AIX and True64.
    * Fix AIX PIC suffix (use .o instead of .po).


o   Volker Lendecke <vl@samba.org>
    * Fixes for various Klocwork defect reports.
    * Fixes for various Coverity defect reports.
    * BUG 3848: Fix WinXP join error in a Samba domain using ldapsam.



o   Derrell Lipman <derrell@samba.org>
    [libsmbclient]
    * BUG 3814: Only set the DFS capability flag in client requests
      if the share is a DFS root.


o   Jason Mader <jason@ncac.gwu.edu>
    * Compiler warning fixes.


o   James Peach <jpeach@sgi.com>
    * Ensure smbclient always prompts on standard output when in
      interactive mode.


o   Andreas Schwab
    * Correct syntax error in aclocal.m4.


Release Notes for older release follow:
